# rustengine

./: .gitignore  Cargo.toml  LICENSE  ReadMe.md  bump.js  config  gen.js  gen.txt  magics.txt
s/: c.bat  cppb.bat  d.bat  g.bat  p.bat  pb.bat  ppb.bat  r.bat  t.bat
src/: bitboard.rs  constants.rs  lib.rs  lineargame.rs  main.rs  piece.rs  square.rs  state.rs  uci.rs
