[package]
name = "rustengine"
version = "1.0.0"
license = "MIT"
authors = ["easychessanimations <chessbotroulette@gmail.com>"]
description = "Rust bitboard multi variant uci chess analysis engine."
keywords = ["bitboard", "variant", "chess", "uci", "engine"]
homepage = "https://github.com/easychessanimations/rustengine#rustengine"
repository = "https://github.com/easychessanimations/rustengine"
edition = "2018"

[dependencies]
