[package]
name = "rustengine"
version = "1.0.33"
license = "MIT"
authors = ["easychessanimations <chessbotroulette@gmail.com>"]
description = "Rust bitboard multi variant uci chess analysis engine."
keywords = ["bitboard", "variant", "chess", "uci", "engine"]
homepage = "https://github.com/easychessanimations/rustengine#rustengine"
repository = "https://github.com/easychessanimations/rustengine"
documentation = "https://docs.rs/rustengine"
edition = "2018"

[lib]
name = "rustenginelib"
path = "src/lib.rs"

[[bin]]
name = "rustengine"
path = "src/main.rs"

[dependencies]
once_cell = "1.3.1"
rand = "0.7"